Estilos de pagina inscripcion

--- a/public/styles/main.less
+++ b/public/styles/main.less
@@ -72,3 +72,34 @@
     color: @colorSecundaryText;
   }
 }
+/*----------------------------------------REDUX-EX-------------------------------------*/
+.inscripciones-container{
+  text-align: center;
+  background-color: white;
+  background-size: cover;
+h1{
+color: #2d3e54;
+}
+p{
+  color: #2d3e54;
+  margin: auto 20%;
+  text-align: justify;
+}
+.input-section{
+margin-top: 20px;
+input{
+  margin: 5px;
+  background-color: #e6e6e6;
+}
+Button{
+  background-color: #ffb935;
+  color: #454846;
+  border-radius: 15px;
+  &:hover{
+    background-color: #454846;
+    color: #ffb935;
+  
+  }
+}
+}
+}
