--- a/public/styles/main.less
+++ b/public/styles/main.less
@@ -1,26 +1,26 @@
-@import: './colors.less';
+@import: "./colors.less";
 
 //----------------------------------------------Nav-----------------------------------------------
-.nav-div{
+.nav-div {
   width: 100%;
   margin-bottom: 35px;
 }
-.to-home{
+.to-home {
   display: block;
-  margin: 10px auto 10px auto ;
+  margin: 10px auto 10px auto;
   text-align: center;
   width: 170px;
   color: @colorNavLogo;
   font-size: 30px;
   cursor: pointer;
-  span{
+  span {
     font-size: 14px;
   }
 }
-.nav-btn{
+.nav-btn {
   width: 98%;
   background-color: @colorNavButtons;
-  margin: 10px auto 10px auto ;
+  margin: 10px auto 10px auto;
   text-align: center;
   display: flex;
   align-items: center;
@@ -29,77 +29,126 @@
   color: @colorNavNavButtonsText;
   font-size: 16px;
   cursor: pointer;
-  &:hover{
+  &:hover {
     background-color: @colorNavButtonsLigth;
   }
 }
-.nav-border{
+.nav-border {
   outline: @colorNavNavButtonsText solid 1px;
 }
 /*----------------------------------------HOME-------------------------------------*/
-.home-container{
+.home-container {
   text-align: center;
 }
-.home-container img{
+.home-container img {
   border-radius: 50%;
 }
-.home-container h1{
+.home-container h1 {
   color: @colorPrimary;
 }
 /*----------------------------------------ANTD-EX-------------------------------------*/
-.antdEx-container{
+.antdEx-container {
   width: 94%;
   margin: 0px auto 0px auto;
   padding: 25px;
   background-color: @colorTransparentGrey;
-  button{
+  button {
     margin: 30px;
   }
 }
 /*----------------------------------------REDUX-EX-------------------------------------*/
-.reduxEx-container{
+.reduxEx-container {
   width: 94%;
   margin: 0px auto 0px auto;
   padding: 25px;
   background-color: @colorTransparentGrey;
-  p{
+  p {
     color: @colorPrimaryText;
-    strong{
+    strong {
       color: @colorSecundaryText;
     }
   }
-  pre{
+  pre {
     color: @colorSecundaryText;
   }
 }
-/*----------------------------------------REDUX-EX-------------------------------------*/
-.inscripciones-container{
+/*----------------------------------------INSCRIPCIONES-------------------------------------*/
+.inscripciones-container {
   text-align: center;
   background-color: white;
   background-size: cover;
-h1{
-color: #2d3e54;
-}
-p{
-  color: #2d3e54;
-  margin: auto 20%;
-  text-align: justify;
-}
-.input-section{
-margin-top: 20px;
-input{
-  margin: 5px;
-  background-color: #e6e6e6;
-}
-Button{
-  background-color: #ffb935;
-  color: #454846;
-  border-radius: 15px;
-  &:hover{
-    background-color: #454846;
-    color: #ffb935;
-  
+  h1 {
+    color: #2d3e54;
+  }
+  p {
+    color: #2d3e54;
+    margin: auto 20%;
+    text-align: justify;
+  }
+  .input-section {
+    margin-top: 20px;
+    input {
+      margin: 5px;
+      background-color: #e6e6e6;
+    }
+    Button {
+      background-color: #ffb935;
+      color: #454846;
+      border-radius: 15px;
+      &:hover {
+        background-color: #454846;
+        color: #ffb935;
+      }
+    }
   }
 }
-}
+/*----------------------------------------CIDT-------------------------------------*/
+.CIDT-container {
+  width: 94%;
+  margin: 0px auto 0px auto;
+  padding: 25px;
+  background-color: white;
+  .logos{
+    margin: 0 auto;
+    .FD {
+      max-width: 20%;
+      img {
+        height: 50%;
+      }
+    }
+    .EPJ {
+      max-width: 20%;
+      margin: 0 auto;
+      img {
+        height: 50%;
+      }
+    }
+  }
+  .text-cont {
+    text-align: center;
+    h1 {
+      font-weight: bold;
+      font-size: 3em;
+      margin: 0;
+      color: #62728a;
+    }
+    hr {
+      width: 40%;
+    }
+    p {
+      text-align: justify;
+      margin: auto 10%;
+      color: #b1b1b1;
+    }
+    Button {
+      background-color: #ffb935;
+      margin: 30px;
+      color: #454846;
+      border-radius: 15px;
+      &:hover {
+        background-color: #454846;
+        color: #ffb935;
+      }
+    }
+  }
 }
