--- a/public/styles/main.less
+++ b/public/styles/main.less
@@ -4,6 +4,7 @@
 .nav-div {
   width: 100%;
   margin-bottom: 35px;
+  background-color: #1e3f6c;
 }
 .to-home {
   display: block;
@@ -19,22 +20,23 @@
 }
 .nav-btn {
   width: 98%;
-  background-color: @colorNavButtons;
+  color: #ffb935;
+  font-weight: bold;
   margin: 10px auto 10px auto;
   text-align: center;
   display: flex;
   align-items: center;
   justify-content: center;
   height: 50px;
-  color: @colorNavNavButtonsText;
   font-size: 16px;
   cursor: pointer;
   &:hover {
-    background-color: @colorNavButtonsLigth;
+    background-color: #ffb935;
+    color: #1e3f6c;
   }
 }
 .nav-border {
-  outline: @colorNavNavButtonsText solid 1px;
+  outline: #ffb935 solid 1px;
 }
 /*----------------------------------------HOME-------------------------------------*/
 .home-container {
@@ -118,6 +120,7 @@
     }
     .EPJ {
       max-width: 20%;
+
       margin: 0 auto;
       img {
         height: 50%;
