se agrega home page con estilos

--- a/public/styles/colors.less
+++ b/public/styles/colors.less
@@ -14,6 +14,7 @@
 @colorFiveLigth: #85cd42;
 @colorFiveLigthter: #c6e7a6;
 //----------------------Texts------------------
+@colorTextCongres:#febb27;
 @colorPrimaryText: #ffffff;
 @colorSecundaryText: #f2d9a6;
 @colorSecundaryTextLigth: #f5e0b8;
@@ -38,13 +39,14 @@
 @colorFooterTitles: @colorThree;
 //---Backgrounds
 @backgroundFallBack1: #e2e2e2;
-@backgroundImage1: url(/images/background.jpg);
+@backgroundUnam: url("/images/unam1.jpg");
 //---Others
 @colorSuccess: #3ab415;
 @colorSuccessLigth: #56d42f;
 @colorError: #ff4d4f;
 @colorErrorLigth: #e46769;
 @colorTransparentGrey: #64646481;
+
 
 //---------------------Antd Colors----------------
 @primary-color: @colorPrimary;
