--- a/public/styles/tema.less
+++ b/public/styles/tema.less
@@ -21,7 +21,7 @@ button, input[type="submit"], input[type="reset"] {
   html,
   body {
     background-color: @backgroundFallBack1;
-    background: @backgroundImage1 no-repeat center center fixed;
+    background: @backgroundUnam no-repeat center center fixed;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
@@ -29,6 +29,14 @@ button, input[type="submit"], input[type="reset"] {
     font-family: 'Questrial';
     margin: 0px;
     padding: 0px;
+  }
+  body:before{
+    content: "";
+    width: 100%;
+    height: 100%;
+    background-image: linear-gradient(#000590e2,#1c629c,#dbead7);
+    position: absolute;
+    opacity: 0.5;
   }
   p{
     color: @colorSecundaryText;
