Se agrega Program page sin estilos

--- a/public/styles/main.less
+++ b/public/styles/main.less
@@ -155,3 +155,9 @@
     }
   }
 }
+/*----------------------------------------PROGRAMA-------------------------------------*/
+.list-container{
+  width: 94%;
+  margin: 0px auto 0px auto;
+  padding: 25px;
+}
