--- a/public/styles/main.less
+++ b/public/styles/main.less
@@ -109,8 +109,8 @@
   width: 94%;
   margin: 0px auto 0px auto;
   padding: 25px;
-  background-color: white;
-  .logos{
+  background-color: #ffffff;
+  .logos {
     margin: 0 auto;
     .FD {
       max-width: 20%;
@@ -156,8 +156,122 @@
   }
 }
 /*----------------------------------------PROGRAMA-------------------------------------*/
-.list-container{
-  width: 94%;
-  margin: 0px auto 0px auto;
-  padding: 25px;
+.list-container {
+  background: linear-gradient(
+    0deg,
+    rgba(255, 255, 255, 1) 55%,
+    rgba(27, 57, 95, 1) 100%
+  );
+  width: 100%;
+  padding: 35px;
+  display: flex;
+  flex-direction: column;
+  .top-list {
+    padding-left: 10%;
+    height: 8%;
+    .title{
+      h1{
+        border: white solid 3px;
+        margin: 5px;
+        padding: 10px 5px;
+        padding-left: 20px;
+        font-size: 40px;
+        width: max-content;
+        color: #ffb935;
+        background:none;
+        border-radius: 0px;
+        letter-spacing: 15px;
+      }
+      h2{
+        color: #ffb935;
+        font-size: 30px;
+        text-align: center;
+        max-width: 280px;
+        font-weight: bold;
+      }
+    }
+    h1 {
+      text-align: center;
+      background-color: #ffb935;
+      color: #1b395f;
+      border-radius: 20px;
+      width: 20%;
+      margin: 0 auto;
+    }
+    table {
+      table-layout: fixed;
+      border-collapse: separate;
+      tr {
+        td {
+          font-size: 18px;
+          color: black;
+          padding: 30px 20px;
+          b {
+            color: #ffb935;
+          }
+        }
+      }
+    }
+  }
+  .TwinButtons {
+    text-align: center;
+    Button {
+      background-color: #ffb935;
+      color: #1e3f6c;
+      border-radius: 25px;
+      font-size: 2em;
+      font-weight: bold;
+      height: auto;
+      border: none;
+      &:hover {
+        background-color: #b1b1b1;
+      }
+    }
+  }
+  .event-list {
+    padding-left: 10%;
+    h1 {
+      background-color: #1e3f6c;
+      text-align: center;
+      width: 40%;
+      margin: 0 auto;
+      font-size: 22px;
+      b {
+        color: #ffb935;
+      }
+    }
+    h2 {
+      background-color: #ffb935;
+      font-weight: bold;
+      color: #1b395f;
+      text-align: center;
+      width: 40%;
+      margin: 10px auto;
+    }
+    table {
+      table-layout: fixed;
+      border-collapse: separate;
+      tr {
+        td {
+          font-size: 18px;
+          color: black;
+          padding: 0px 20px;
+          b {
+            color: #1e3f6c;
+          }
+        }
+      }
+    }
+    &-even{
+      table {
+        tr {
+          td {
+            b {
+              color: #ffb935;
+            }
+          }
+        }
+      }
+    }
+  }
 }
