--- a/public/styles/main.less
+++ b/public/styles/main.less
@@ -39,14 +39,15 @@
   outline: #ffb935 solid 1px;
 }
 /*----------------------------------------HOME-------------------------------------*/
-.home-container{
-  .titulo{
-    .cidt{
-      p{
+.home-container {
+  .titulo {
+    .cidt {
+      p {
         font-size: 500%;
-        font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+        font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS",
+          sans-serif;
         //background-color: red;
-        text-align:center;
+        text-align: center;
         color: white;
         border: 5px solid;
         margin: 40px;
@@ -55,77 +56,82 @@
       //background-color: yellow;
       //border: 3px solid black;
     }
-    .congreso{
-        font-size: 300px;
-        //background-color: blue;
-        text-align: center;
-        font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-        color:@colorPrimaryLigth;
-        p{
-          color:@colorTextCongres;
-          font-size: 50px;
-        }
-        padding: auto;
-        margin: auto;
+    .congreso {
+      font-size: 300px;
+      //background-color: blue;
+      text-align: center;
+      font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS",
+        sans-serif;
+      color: @colorPrimaryLigth;
+      p {
+        color: @colorTextCongres;
+        font-size: 50px;
+      }
+      padding: auto;
+      margin: auto;
     }
   }
-  .escuelas{
-    p{
-      font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-      color:@colorTextCongres;
+  .escuelas {
+    p {
+      font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS",
+        sans-serif;
+      color: @colorTextCongres;
       font-size: 50px;
       text-align: center;
     }
   }
-  .contenido{
-    p{
+  .contenido {
+    p {
       font-size: 25px;
       color: white;
       text-align: center;
-      margin-left:300px;
-      margin-right:300px;
+      margin-left: 300px;
+      margin-right: 300px;
     }
   }
-  .icono-mapa{
-    img{
+  .icono-mapa {
+    img {
       display: block;
       margin: auto;
       width: 100px;
       height: 100px;
     }
-    h1{
+    h1 {
       text-align: center;
     }
   }
-  
-  .icono-calendario{
-    img{
+
+  .icono-calendario {
+    img {
       display: block;
       margin: auto;
       width: 100px;
       height: 100px;
     }
-    h1{
+    h1 {
       text-align: center;
     }
   }
-  .imgRandom{
+  .imgRandom {
     text-align: center;
   }
-  .fb{
-    img{
+  .fb {
+    img {
       display: block;
       margin: auto;
       width: 50px;
       height: 50px;
     }
   }
-  .tl{
-    img{
+  .tl {
+    img {
       display: block;
       margin: auto;
       width: 50px;
       height: 50px;
+    }
+  }
+}
 /*----------------------------------------INSCRIPCIONES-------------------------------------*/
 .inscripciones-container {
   text-align: center;
@@ -356,7 +362,11 @@
       }
     }
   }
-  .footer-programa{
-    background: linear-gradient(0deg, rgba(27,57,95,1) 5%, rgba(255,255,255,1) 100%);
+  .footer-programa {
+    background: linear-gradient(
+      0deg,
+      rgba(27, 57, 95, 1) 5%,
+      rgba(255, 255, 255, 1) 100%
+    );
   }
 }
