--- a/public/styles/main.less
+++ b/public/styles/main.less
@@ -6,7 +6,7 @@
   background-color: #1e3f6c;
 }
 
-.to-home{
+.to-home {
   display: block;
   margin: 10px auto 10px auto;
   text-align: center;
@@ -14,7 +14,8 @@
   color: @colorNavLogo;
   font-size: 30px;
   cursor: pointer;
-.nav-btn{
+}
+.nav-btn {
   span {
     font-size: 14px;
   }
@@ -40,88 +41,91 @@
   outline: #ffb935 solid 1px;
 }
 /*----------------------------------------HOME-------------------------------------*/
-.home-container{
-  .titulo{
-    .cidt{
-        p{
-          font-size: 5em;
-          text-align:center;
-          border: 5px solid;
-          margin: 20px 30px;
-          word-spacing: 5rem;
-        }
+.home-container {
+  .titulo {
+    .cidt {
+      p {
+        font-size: 5em;
         text-align: center;
-        font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-        justify-content: center;
+        border: 5px solid;
+        margin: 20px 30px;
+        word-spacing: 5rem;
+      }
+      text-align: center;
+      font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS",
+        sans-serif;
+      justify-content: center;
     }
-    .congreso{
-        text-align: center;
-        font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-        margin: auto;
-        p{
-          color:@colorTextCongres;
-          font-size: 4em;
-        }
+    .congreso {
+      text-align: center;
+      font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS",
+        sans-serif;
+      margin: auto;
+      p {
+        color: @colorTextCongres;
+        font-size: 4em;
+      }
     }
   }
-  .escuelas{
-    p{
-      font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-      color:@colorTextCongres;
+  .escuelas {
+    p {
+      font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS",
+        sans-serif;
+      color: @colorTextCongres;
       font-size: 4em;
       text-align: center;
     }
   }
-  .contenido{
-    p{
-      font-size:2em;
+  .contenido {
+    p {
+      font-size: 2em;
       color: white;
       text-align: center;
-      margin:10px 100px;
+      margin: 10px 100px;
     }
   }
-  .icono-mapa{
-    text-align:end;
-    img{
+  .icono-mapa {
+    text-align: end;
+    img {
       margin: 25px 0px;
       width: 6em;
       height: 6em;
     }
   }
-  .texto-mapa{
-    text-align:left;
-    h1{
+  .texto-mapa {
+    text-align: left;
+    h1 {
       padding: 0.5em;
       margin: 25px;
-      font-size:2em;
+      font-size: 2em;
     }
   }
-  .icono-calendario{
-    text-align:end;
-    img{
+  .icono-calendario {
+    text-align: end;
+    img {
       margin: 25px 0px;
       width: 6em;
       height: 6em;
     }
   }
-  .texto-calendario{
-    text-align:justify;
-    h1{
+  .texto-calendario {
+    text-align: justify;
+    h1 {
       margin: 25px;
-      font-size:2em;
+      font-size: 2em;
       text-align: justify;
     }
   }
-  .fb{
-    img{
+  .fb {
+    img {
       display: block;
       margin: auto;
       width: 4em;
       height: 4em;
     }
   }
-  .gaceta{
-    img{
+  .gaceta {
+    img {
       display: block;
       margin: auto;
       width: 5em;
@@ -375,35 +379,35 @@
     );
   }
 }
-@media(max-width:1200px) {
+@media (max-width: 1200px) {
   body {
     font-size: 14px;
   }
 }
-@media(max-width:992px) {
+@media (max-width: 992px) {
   body {
-    font-size:  12px;
+    font-size: 12px;
   }
 }
-@media(max-width:768px) {
+@media (max-width: 768px) {
   body {
     font-size: 10px;
   }
-  .cidt{
+  .cidt {
     font-size: 0.45em;
   }
 }
-@media(max-width:576px) {
+@media (max-width: 576px) {
   body {
     font-size: 8px;
   }
-  .cidt{
+  .cidt {
     font-size: 0.35em;
   }
-  .texto-mapa{
-    font-size: 0.75em
+  .texto-mapa {
+    font-size: 0.75em;
   }
-  .texto-calendario{
+  .texto-calendario {
     font-size: 0.75em;
   }
 }
