--- a/public/styles/tema.less
+++ b/public/styles/tema.less
@@ -29,7 +29,7 @@ button, input[type="submit"], input[type="reset"] {
     content: "";
     width: 100%;
     height: 100%;
-    background-image: linear-gradient(#000590e2,#1c629c,#dbead7);
+//    background-image: linear-gradient(#000590e2,#1c629c,#dbead7);
     position: fixed;
     opacity: 0.9; 
   }
