Se arreglam errores de CVs

--- a/public/styles/main.less
+++ b/public/styles/main.less
@@ -61,6 +61,8 @@
       font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS",
         sans-serif;
       margin: auto;
+      font-weight: bold;
+
       p {
         color: @colorTextCongres;
         font-size: 4em;
@@ -74,6 +76,7 @@
       color: @colorTextCongres;
       font-size: 4em;
       text-align: center;
+      font-weight: bold;
     }
   }
   .contenido {
@@ -98,6 +101,7 @@
       padding: 0.5em;
       margin: 25px;
       font-size: 2em;
+      font-weight: bold;
     }
   }
   .icono-calendario {
@@ -114,6 +118,7 @@
       margin: 25px;
       font-size: 2em;
       text-align: justify;
+      font-weight: bold;
     }
   }
   .fb {
